@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.3 
+    Translation of CVS Revision: 1.5
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -29,8 +29,8 @@
 
 <p>
   Si elle n'y est pas, consultez la documentation
-  <a href="@DOC@stable">en ligne</a>  (pour les versions autres que stable,
-  cliquez <a href="../documentation.html">ici</a>).
+  <a href="@DOC@stable">en ligne</a>  (pour les versions autres que la
+  derni&egrave;re version stable, cliquez <a href="../documentation.html">ici</a>).
 </p>
 
 <h2>&Agrave; l'aide&nbsp;!</h2>
@@ -41,10 +41,8 @@
 
 <ul>
   <li>
-    Pour toute question, &eacute;crivez &agrave;
-    <pre>
-      <a href="mailto:lilypond-user@gnu.org">lilypond-user@gnu.org</a>
-    </pre>
+    Pour toute question, <a href="http://post.gmane.org/post.php?group=gmane.comp.gnu.lilypond.general">&eacute;crivez
+    un message</a> &agrave; la liste <tt>lilypond-user@gnu.org</tt>.
   </li>
   <li>
     Pour souscrire, rendez-vous sur
