@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.33
+    Translation of CVS Revision: 1.34
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -33,12 +33,15 @@
     r&eacute;utiliser par la suite.
   </dd>
 
-  <dt>Associez musique et texte</dt> <dd> 
-  	Ins&eacute;rez des morceaux de
-  musique dans des textes sans avoir besoin de couper puis coller des
-  images. Avec l'utilitaire <tt>lilypond-book</tt>, vous pouvez
-  int&eacute;grer de fa&ccedil;on transparente de la musique dans un document LaTeX
-  ou HTML.  </dd>
+  <dt>Associez musique et texte</dt>
+  <dd>
+	Ins&eacute;rez des extraits
+	de musique dans des textes sans avoir besoin de couper puis
+	coller des images. Int&eacute;grez de la musique de
+	fa&ccedil;on transparente dans un document LaTeX ou HTML, ou
+	ajoutez de la musique dans OpenOffice.org avec <a
+	href="http://ooolilypond.sourceforge.net/">ooolilypond</a>.
+  </dd>
 
   <dt>Pas de bricolage</dt>
 
@@ -68,7 +71,7 @@
 
   <dt>M&ecirc;lez musique et texte</dt> <dd>
     Ins&eacute;rez des fragments musicaux dans des documents sans
-    copier et coller des images. Gr&acirc;ce à&agrave; l'utilitaire
+    copier et coller des images. Gr&acirc;ce &agrave;&agrave; l'utilitaire
     <tt>lilypond-book</tt>, vous pouvez int&eacute;grer de la musique
     dans des documents LaTeX ou HTML.
   </dd>
