@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.26
+    Translation of CVS Revision: 1.27
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
