@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.28
+    Translation of CVS Revision: 1.29
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
