@@ -43,7 +43,7 @@
   <li>
     Heb je vragen, stuur een e-mail naar
     <pre>
-      <a href="mailto:lilypond-user@gnu.org">lilypond-user@gnu.org</a>
+      <a href="http://post.gmane.org/post.php?group=gmane.comp.gnu.lilypond.general">lilypond-user@gnu.org</a>
     </pre>
   </li>
   <li>
