@@ -41,10 +41,8 @@
 
 <ul>
   <li>
-    For questions, send email to
-    <pre>
-      <a href="mailto:lilypond-user@gnu.org">lilypond-user@gnu.org</a>
-    </pre>
+    For questions, <a href="http://post.gmane.org/post.php?group=gmane.comp.gnu.lilypond.general">post
+    a message</a> to the <tt>lilypond-user@gnu.org</tt> mailing list.
   </li>
   <li>
     To subscribe, head over to
